--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sinatra MVC</title>
+    <title>Fortune Teller</title>
   </head>
 
   <body>
-    <h1>Index</h1>
-    <p> I love programming </p>
+    <h1>Welcome To The Fortune Teller!</h1>
+    <p>Enter Your Name</p>
+    <form method = POST>
+      <input type = "text" name = "user">
+      <br>
+      <input type = "submit" value = "GER YOUR FORTUNE!!!">
+    </form>
   </body>
 </html>
